--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TransparentToolbar" parent="Widget.AppCompat.ActionBar" />
+
+    <style name="Immersive" parent="AppTheme">
+        <item name="actionBarStyle">@style/TransparentToolbar</item>
+        <item name="android:windowBackground">@android:color/black</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="windowActionBarOverlay">true</item> <!-- Support library compatibility -->
+    </style>
+
 </resources>
