--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+  xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/action_apply"
-        android:title="@string/apply"
-        app:showAsAction="ifRoom" />
+  <item
+    android:id="@+id/action_apply"
+    android:title="@string/apply"
+    app:showAsAction="ifRoom"/>
+
+  <item
+    android:id="@+id/action_download"
+    android:title="@string/download"
+    app:showAsAction="ifRoom"/>
 
 </menu>
